--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Coffee Room</title>
     <link rel="stylesheet" href="główna.css">
     <script src="główna.js" defer></script>
-     <script src="https://kit.fontawesome.com/1017934682.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1017934682.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
-        <a class="logoLink" href="głowna.html" ><img class="logo" src="coffeeRoomLogo.png" alt="coffeeRoomLogo"></a>
+        <a class="logoLink" href="index.html" ><img class="logo" src="coffeeRoomLogo.png" alt="coffeeRoomLogo"></a>
         <button class="openSidebar" onclick="openSidebar()"><i class="fa-solid fa-bars fa-2xl"></i></button>
         <div class="navigation">
             <ul>
-                <button class="closeSidebar" onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></button>
-                <li><a href="oNas.html">O nas</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <button class="closeSidebar" onclick="closeSidebar()"><i class="fa-solid fa-xmark fa-2xl"></i></button>
+                <li><a class="oNasLink" href="oNas.html">O nas</a></li>
+                <li><a class="menuLink" href="menu.html">Menu</a></li>
+                <li><a class="kontaktLink" href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
